<resources>
    <string name="app_name">Autism Helper</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>

    <string name="passwords_not_same">Passwords are not equal</string>
    <string name="date_invalid">Date must be between 1970 and current date</string>
    <string name="username_invalid">Username has to be at least 5 characters long</string>
    <string name="password_invalid">Password must contain at least 8 characters</string>
    <string name="malformed_email">Malformed email</string>
    <string name="update_username_dob">Would you like to update your username and date of birth?</string>

    <string name="btn_sign_in">Sign in</string>
    <string name="input_errors">Incorrect input</string>
    <string name="parent">Parent</string>
    <string name="child">Child</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="dont_have_acc">Don\'t have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="child_name">Child name</string>
    <string name="add_child_profile">Add child to profile</string>
    <string name="email_forgotten_password">Enter your account\'s email</string>

    <string name="success">Success</string>
    <string name="confirm">Confirm</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
    <string name="enter_parent_password">Enter parent password</string>
    <string name="add_another_child">Add another child</string>
    <string name="name">Name</string>
    <string name="choose_parent_password">Choose parent password</string>
    <string name="google_sign_in">Sign In     </string>
    <string name="unknown_error">Unknown Error</string>

    <string name="load_error">Database load error</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit parent mode</string>

    <string name="children">Children</string>
    <string name="error_inserting">Error inserting to database</string>
    <string name="logout_not_success">Logout unsuccessful</string>
    <string name="sync_error">Sync error</string>
    <string name="firebase_upload_error">Firebase upload error</string>
    <string name="fetch_error">Fetching data error</string>
    <string name="google_sign_in_error">Google Sign In error</string>
    <string name="login_error">Login error</string>
    <string name="register_error">Register failed</string>
    <string name="children_data_load_error">Loading children data failed</string>
    <string name="data_load_error">Data load failed</string>
    <string name="category_load_fail">Failed loading category data</string>
    <string name="parent_child">Are you a parent or a child?</string>
    <string name="pick_category">Pick Category</string>
    <string name="question">Question</string>
    <string name="children_load_fail">Failed loading children</string>
    <string name="pick_child">Which one are you?</string>
    <string name="save_score">Save score?</string>
    <string name="score_saved">Score saved</string>
    <string name="save_error">Error saving score</string>
    <string name="no_internet">Internet connection not available. Open network settings?</string>
    <string name="play_again">Play again</string>
    <string name="add_child">Add child</string>
    <string name="child_saved">Child saved</string>
    <string name="loading">Loading</string>
    <string name="syncing">Syncing data</string>
    <string name="sync">Sync</string>
    <string name="speak">Speak</string>
    <string name="add_phrase">Add phrase</string>
    <string name="phrase_name">Phrase name</string>
    <string name="phrase_icon">Phrase icon</string>
    <string name="invalid_input">Invalid input</string>
    <string name="phrase_saved">Phrase saved</string>
    <string name="error_saving_phrase">Saving unsuccessful</string>


    <string name="construct_sentence">Construct a sentence</string>
    <string name="feature_not_supported">Feature not supported</string>
    <string name="phrases">Phrases</string>
    <string name="data_synced">Data synced successfully</string>
    <string name="saved">Saved</string>
    <string name="delete_phrase">Delete phrase?</string>
    <string name="parent_password">Parent password</string>
    <string name="update">Update</string>
    <string name="profile_pic">Profile picture</string>
    <string name="aac">AAC</string>
    <string name="close_quiz">Do you really want to close the quiz?</string>
    <string name="quiz_finished">Quiz finished</string>
    <string name="fail">False</string>
    <string name="deleted">Deleted</string>
    <string name="its_scores">\'s scores</string>
    <string name="delete_child">Delete child?</string>
    <string name="child_deleted">Child deleted</string>
    <string name="child_updated">Child updated</string>
    <string name="update_child">Update child data</string>
    <string name="error_saving">Saving error</string>

    <string name="no_children">No children added to the profile.\n Add one by pressing the + icon on the upper right side.</string>
    <string name="no_children_short">No children added to the profile.</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="audio_disabled">Sounds disabled</string>
    <string name="max_phrases">Too many phrases</string>
    <string name="save_settings">Save settings</string>
    <string name="settings_saved">Settings saved</string>
    <string name="enable_sound">Enable sound</string>
    <string name="set_pitch">Set AAC voice pitch</string>
    <string name="set_speed">Set AAC voice speed</string>
    <string name="this_is_my_voice">Test</string>
    <string name="downloading_resources">Downloading resources</string>
    <string name="phrase_text">Enter text</string>
    <string name="news">Autism News</string>
    <string name="enter_phrase_text">Enter phrase text</string>
    <string name="really_logout">Do you really want to logout?</string>
    <string name="really_exit">Do you really want to exit?</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="save_sentence">Save sentence</string>

</resources>
