<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/pick_child"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spChildren"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnNegative"
            style="@style/style_prompt_button"
            android:text="@string/cancel" />


        <Button
            android:id="@+id/btnPositive"
            style="@style/style_prompt_button"
            android:text="@string/confirm" />

    </LinearLayout>

</LinearLayout>