<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".modules.parent.fragments.ProfileFragment">

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_margin="30dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_profile_placeholder" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etUsername"
            style="@style/profileEditTextStyle"
            android:drawableStart="@drawable/ic_account_circle"
            android:hint="@string/username"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etEmail"
            style="@style/profileEditTextStyle"
            android:drawableStart="@drawable/ic_mail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:clickable="false"
            android:focusable="false"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etParentPassword"
            style="@style/profileEditTextStyle"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/parent_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>