<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.parent.fragments.PhrasesFragment">

   <android.support.v7.widget.RecyclerView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/rvPhrases"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/llAddPhrase"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone"
        tools:visibility="visible"
        android:padding="30dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- todo: animations-->
            <EditText
                style="@style/signupEditTextStyle"
                android:id="@+id/etPhraseName"
                android:hint="@string/phrase_name"
                android:inputType="text"
                android:drawableStart="@drawable/ic_account_circle"
                android:nextFocusForward="@id/etChildDateOfBirth" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/signupEditTextStyle"
                android:id="@+id/etIcon"
                android:hint="@string/phrase_icon"
                android:inputType="text"
                android:drawableStart="@drawable/ic_image"
                android:cursorVisible="false"
                android:editable="false"
                android:clickable="true"
                android:focusable="false"
                tools:ignore="KeyboardInaccessibleWidget" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:text="@string/add_phrase"
            style="@style/style_answer_button"
            android:id="@+id/btnAddPhrase"
            android:padding="10dp"
            android:layout_margin="20dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:id="@+id/ivPhraseIcon"
            android:layout_margin="20dp"
            android:src="@null"/>
    </LinearLayout>
</FrameLayout>