<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/enable_sound"
                style="@style/style_settings_item_text" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/swSound"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:text="@string/set_pitch"
                android:id="@+id/tvPitch"
                style="@style/style_settings_item_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:id="@+id/tvPitchValue"/>

            <SeekBar
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sbPitch"
                android:max="30"
                android:layout_below="@+id/tvPitch"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:text="@string/set_speed"
                android:id="@+id/tvSpeed"
                style="@style/style_settings_item_text"
                android:layout_centerVertical="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:id="@+id/tvSpeedValue"/>

            <SeekBar
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sbSpeed"
                android:max="30"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tvSpeed"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>